--- a/position.css
+++ b/position.css
@@ -1,18 +1,42 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     text-align: center;
 }
 
-.parent{
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.selection-div{
+    width: 90%;
+    margin-left: 5%;
+    margin: 50px auto;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+select{
+    padding: 5px;
+    font-size: 16px;
+}
+
+#parent{
     width: 80%;
     height: 80vh;
     margin-top: 30px;
-    margin-left: 10%;
-    background-image: linear-gradient(lightcyan, lightpink);
+    margin-left: 10%;    
+    border: 1px solid black;
 }
 
 .child{
-    height: 120px;
-    width: 120px;
+    min-height: 120px;
+    min-width: 120px;
     text-align: center;
 }
 
@@ -30,4 +54,91 @@ body{
 
 .child:nth-child(3){
     background-color: rgb(235, 176, 149);
+}
+
+
+.style-div{
+    margin: 10px auto;
+}
+#position-style{
+    width: 235px;
+    height: 115px;
+    margin: 10px auto;
+}
+
+
+/* toggle switch styles */
+
+.toggle-div{
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+
+/* Media queries */
+@media screen and (max-width: 768px){
+    .container{
+        grid-template-columns: auto;
+    }
 }
