--- a/position.css
+++ b/position.css
@@ -13,6 +13,10 @@ body{
     grid-template-columns: 1fr 1fr;
 }
 
+.title{
+    margin-top: 10px;
+}
+
 .selection-div{
     width: 90%;
     margin-left: 5%;
